# python_spring_template

./: .gitignore  .project  README.md  index.html
html/: 010_layout_head.html  012_layout_header.html  014_layout_footer.html  016_layout_sidebar.html  adm_setting.html  boot_test.html  contact.html  download.html  error.html  forward.html  hello.html  home.html  index.html  layout - 01.html  layout.html  layout_old.html  list.html  login.html  markdown.html  menuFolder.html  news.html  picoGo.html  privacy.html  python_books.html  python_docs.html  python_download.html  python_download.json  python_glossary.html  python_history.html  python_history.md  python_intro.html  python_intro.md  python_news.html  python_youtbue.html  service.html  sidebar_02.html  source.html  sourceList.html  sourceViewer.html  sys_setting.html  (+9 more)
html/const/: index.html
html/python/ppt2html/: Ppt2HtmlConverter.py
html/python_script/: argparse_example.py  ppt2html_convert.py
html/python_script/ppt2html/: Ppt2HtmlConverter.py  ppt2html_convert.py
html/python_script/test/: argparse_example.py
html/rsc/100_main_banner/24-07-04/: info.txt
html/rsc/100_main_banner/24-08-19/: info.txt
html/rsc/100_main_banner/24-09-05/: info.txt
html/rsc/100_main_banner/24-09-06/: info.txt
html/rsc/100_main_banner/24-11-30/: info.txt
html/rsc/100_main_banner/25-04-01_dacon/: info.txt
html/rsc/102_satellite_image/: 24-06-08 기상_위성영상_오픈API활용가이드v2.docx  24-06-09 기상 영상 요청.txt  satellite_image.py  satellite_image_20240616_ko_ir105.json  satellite_image_20240617_ko_ir105.json  test.py  ~$-06-08 기상_위성영상_오픈API활용가이드v2.docx
html/rsc/103_book/book_001/: books.json
html/rsc/103_book/book_002/: books.json
html/rsc/103_book/book_004/: books.json
html/rsc/103_book/book_005/: books.json
html/rsc/103_book/book_006/: books.json
html/rsc/103_books/book_003_modu_python/: books.json
html/rsc/200_ppt_docs/: folder_info.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/: folder_info.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 01] 파이썬 설치 방법/: 005.html  013.html  014.html  015.html  016.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 02] VSCODE 설치 방법/: 001.html  003.html  005.html  006.html  007.html  008.html  009.html  010.html  012.html  013.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 03] 파이썬 PRINT 사용/: 001.html  008.html  010.html  012.html  014.html  016.html  folder_info.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 03] 파이썬 PRINT 출력/: 005.html  006.html  007.html  011.html  013.html  015.html
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 04] 파이썬 기본 데이터 타입/: 001.html  003.html  005.html  010.html  013.html  014.html  015.html  016.html  021.html  023.html  folder_info.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 05] 파이썬 프로그램 구성요소/: 003.html  004.html  007.html  011.html  015.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 10] 파이썬 range 반복문/: folder_info.json
html/rsc/200_ppt_docs/[001] [PYW] 윈도우 파이썬/[PYW 11] 파이썬 list 반복문/: 011.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[002] [UBT] 우분투 리눅스/: folder_info.json
html/rsc/200_ppt_docs/[002] [UBT] 우분투 리눅스/[UBT 01] VmWare 우분투 설치/: 004.html  008.html  010.html  013.html  016.html  017.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[002] [UBT] 우분투 리눅스/[UBT 02] 파이썬 전체 패키지 업데이트/: 002.html  003.html  004.html  005.html  006.html  007.html  011.html  012.html  013.html  014.html  018.html  022.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[003] [CV2] 영상처리/: folder_info.json
html/rsc/200_ppt_docs/[003] [CV2] 영상처리/[CV2 01] 파이썬 OpenCV 패키지 설치/: 001.html  002.html  003.html  004.html  005.html  006.html  007.html  008.html  009.html  010.html  011.html  012.html  013.html  014.html  015.html  folder_info.json  slides.json
html/rsc/200_ppt_docs/[PYW 01] 윈도우에서 파이썬 설치 방법/: 001.html  002.html  003.html  004.html  005.html  006.html  007.html  008.html  009.html  010.html  011.html  012.html  013.html  014.html  015.html  016.html  017.html  018.html  019.html
html/rsc/300_menu/: menu.json
html/rsc/css/: jupyter_style.css  markdown.css  python.css  sidebars.css  skyslam.css
html/rsc/data/file/: 99Dan.py
html/rsc/python_script/: convert_ipynb.py  ppt2html_convert.py
html/rsc/src/1000_라즈베리파이 피코 LED 깜빡이기/: led_blink.py
html/rsc/src/100_Raspberry_Pi/: package_update_raspberry.py
html/rsc/src/100_Raspberry_Pi (라즈베리파이)/: package_update_raspberry.py  readme.txt
html/rsc/src/200_RaspberryPi_DistanceSensor/: DistanceSensor.py  DistanceSensorAnimation.py  DistanceSensorPlot.py  DistanceSensorRed.py  PltAnimation.py
html/rsc/src/200_Raspberry_Pico (라즈베리파이 피코)/: readme.txt
html/rsc/src/300_GuguDan/: GuguDan.py
html/rsc/src/300_구구단_출력/: GuguDan2.py
html/rsc/src/400_OpenCV/: .gitignore  README.md
html/rsc/src/410_CV2/: 100_camera.ipynb  101_camera.py  101_camera_raw.py  103_camera_edge.ipynb  104_camera_edge.py
html/rsc/src/410_CV2 (OpenCV 영상처리)/: 100_camera.ipynb  103_camera_edge.ipynb  200_morphology_remove_noise.ipynb  201_connect_ellipse.ipynb
html/rsc/src/410_CV2 (OpenCV 영상처리)/101_vs_example_dll/: CMakeLists.txt  readme.txt
html/rsc/src/410_CV2 (영상처리)/: 105_camera_cell.ipynb  readme.txt
html/rsc/src/410_CV2/102_example_static/: CMakeLists.txt  main.cpp  readme.txt
html/rsc/src/500_Ubuntu/: HelloWorld.py  hello.py  package_update_ubuntu.py  shell_command_example.sh  ubuntu_shell_command.sh
html/rsc/src/500_Ubuntu (우분투)/: Chart.ipynb  notebook.ipynb  ubuntu_shell_command.sh
html/rsc/src/600_Python/: PrintExample.py  RangeExample.py
html/rsc/src/600_Python (파이썬)/: PrintExample.py
html/rsc/src/800_lecture/: 153 라즈베리파이 원격 접속.pptx  154 라즈베리파이 프로그래밍 II (2주차).pptx
html/rsc/src/900_Test (테스트)/: 100_markdown_text.md
(+512 files in other folders)
